--- a/contact.css
+++ b/contact.css
@@ -21,8 +21,9 @@
 .nav .nav-item .nav-link:hover{
     color: #2fcc76;
 }
+
 .container{
-    height: 100vh;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,10 +37,6 @@ form:hover{
 #floatingTextarea{
     height: 50px;
 }
-.back-video{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-    opacity: 1;
+body{
+    background-image: url(starsGif.gif);
 }
