--- a/contact.css
+++ b/contact.css
@@ -10,7 +10,9 @@
     box-shadow: 0 0 25px 0 black;
     display: flex;
     align-items: center;
-    position: fixed;
+    position: absolute;
+    width: auto;
+    z-index: 0;
 }
 
 .nav .nav-item .nav-link{
@@ -23,8 +25,9 @@
 }
 
 .container{
-    
-    display: flex;
+    position: relative;
+    margin-top: 100px;
+    display: block;
     align-items: center;
     justify-content: center;
     color: whitesmoke;
@@ -40,3 +43,5 @@ form:hover{
 body{
     background-image: url(starsGif.gif);
 }
+
+/*ALREADY RESPONSIVE*/
