--- a/stylesBS.css
+++ b/stylesBS.css
@@ -97,3 +97,47 @@
     max-width: 100% !important;
     overflow-x: hidden !important;
 }
+
+@media (max-width:1000px){
+   
+   
+}
+@media (max-width:768px){
+   
+}
+@media (max-width:470px){
+  span:nth-child(1) {
+    animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    color: #40e98c;
+    font-size: 40px;
+  }
+  
+  span:nth-child(2) {
+    animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    color: white;
+    font-size: 40px;
+
+  }
+  
+  span:nth-child(3) {
+    animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    
+  }
+  
+  span:nth-child(4) {
+    animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    font-size: 20px;
+    color: white;
+  }
+  
+  span:nth-child(5) {
+    animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    font-size: 20px;
+    color: white;
+  }
+  span:nth-child(6) {
+    animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+    color: #40e98c;
+    font-size: 20px;
+  }
+}
