--- a/working.css
+++ b/working.css
@@ -21,10 +21,6 @@
     justify-content: center;
     align-items: center;
 }
-h2{
-    text-align: center;
-    padding: 10px;
-}
 
 img{
     height: 300px;
@@ -34,4 +30,51 @@ img{
     display: flex;
     justify-content: center;
     align-items: baseline;
+}
+
+/*Responsive*/
+@media (max-width:1000px){
+    .container{
+        margin: 25vh;
+       
+    }
+    .text{
+        margin-bottom: 20px;
+        text-align:center;
+    }
+   .gif{
+       padding: 0;
+       width: auto;
+       margin: auto;
+   }
+}
+@media (max-width:768px){
+    .container{
+        margin: 25vh;
+       
+    }
+    .text{
+        margin-bottom: 20px;
+        text-align:center;
+    }
+    .gif{
+        padding: 0;
+        width: auto;
+        margin: auto;
+    }
+}
+@media (max-width:470px){
+    .container{
+        margin: 15vh;
+        
+    }
+    .text{
+        margin-bottom: 20px;
+        text-align:center;
+    }
+    .gif{
+        padding: 0;
+        width: auto;
+        margin: auto;
+    }
 }
