--- a/about.css
+++ b/about.css
@@ -143,7 +143,7 @@
     width: 200px;
  }
  body{
-    background-image: url(starsGif.gif);
+    background-image: url(images/starsGif.gif);
 }
 
 /*Responsive 
