--- a/contact.css
+++ b/contact.css
@@ -41,7 +41,7 @@ form:hover{
     height: 50px;
 }
 body{
-    background-image: url(starsGif.gif);
+    background-image: url(images/starsGif.gif);
 }
 
 /*RESPONSIVE*/
