--- a/projects.css
+++ b/projects.css
@@ -17,7 +17,7 @@
 
 /*main*/
 body{
-    background-image: url(starsGif.gif);
+    background-image: url(images/starsGif.gif);
 }
 #card1{
     margin-top: 160px;
