--- a/contact.css
+++ b/contact.css
@@ -11,8 +11,7 @@
     display: flex;
     align-items: center;
     position: fixed;
-    width: auto;
-    z-index: 0;
+    top: 0;
 }
 
 .nav .nav-item .nav-link{
